@@ -1,3 +1,9 @@
+2006-09-27  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
+
+	* cmdline.tcl: Bumped to version 1.3, due internal rewrite
+	* cmdline.man: (Folding of typedCmdline into main file).
+	* pkgIndex.tcl:
+
 2006-09-13  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
 
 	* cmdline.test: Added 'exit' to the scripts executed in
